2003-12-04  Zhi-Da Zhong  <zz@sysdetect.com>

	* lib/b_vptr.c: vptr utilities -- just vptr_*trimleft() right now

	* lib/Makefile: added b_vptr.c

	* include/libbk.h: added vptr_*trimleft()

2003-12-02  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_strconv.c (bk_string_atoflag): parse flags without [] for
	XXE-friendly featuresets
	
2003-12-01  Seth Robertson  <seth@blue.sysdetect.com>

	* lib/b_pollio.c (bk_polling_io_close): Don't try to flush writes
	if write channel is dead.

	* lib/b_ioh.c (bk_ioh_stdwrfun): Don't cry if writev returns
	EWOULDBLOCK/EAGAIN

2003-11-22  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_string.c (bk_string_registry_idbystr): don't return the last id
	if you can't find the string; return 0, as you're supposed to...
	My god, we've only implemented the moral equivalent of String.intern()
	half a dozen times and we *still* can't get it right?!?!]

	* ssl/b_ssl.c, lib/b_*.c, include/libbk.h, include/libbkssl.h:	massive
	stupid "make worker -v useful" for debugging featuresets commit	- aka
	"make you regret that you ran make depend" after touching libbk*.h

2003-11-14  James Tanis  <jtt@pearl.sysdetect.com>

	* xml/b_search.c (bkxml_attrnode_valbyname): Convenience function
	to extract a attribute value by name.

2003-10-28  James Tanis  <jtt@pearl.sysdetect.com>

	* xml/b_search.c (bkxml_attrnode_data): Make libxml to xml escape
	processing on extracted strings.

2003-10-21  James Tanis  <jtt@pearl.sysdetect.com>

	* src/bdtee.c (out_file_handler): Continue relaying in the face of
	a write error to the tee file.
	(relay_tee): Only write NEWLINE before direction indicator when needed.

2003-10-20  James Tanis  <jtt@pearl.sysdetect.com>

	* src/bttcp.c (relay_finish): Only execute when the relay is
	finsihed.

	* src/bdtee.c (proginit): Truncate tee file if it exists.
	(proginit): Close extraneous child descriptors.

	* lib/b_ioh.c (BK_IOH_SHUTDOWN): Shutdown only works on full
	duplex descriptors, close(2) others.