@@ -1,5 +1,5 @@
 #if !defined(lint) && !defined(__INSIGHT__)
-static const char libbk__rcsid[] = "$Id: b_vptr.c,v 1.1 2003/12/05 00:02:47 zz Exp $";
+static const char libbk__rcsid[] = "$Id: b_vptr.c,v 1.2 2003/12/06 01:22:02 dupuy Exp $";
 static const char libbk__copyright[] = "Copyright (c) 2003";
 static const char libbk__contact[] = "<projectbaka@baka.org>";
 #endif /* not lint */
@@ -28,6 +28,41 @@ static const char libbk__contact[] = "<projectbaka@baka.org>";
 
 
 /**
+ * Append one bk_vptr to a bk_vptr.
+ *
+ *	@param B BAKA thread/global state.
+ *	@param dp The destination @a bk_vptr.
+ *	@param sp the source @a bk_vptr.
+ *	@return <i>-1</i> on failure.<br>
+ *	@return <i>0</i> on success.
+ */
+extern int bk_vptr_append(bk_s B, struct bk_vptr *dp, struct bk_vptr *sp)
+{
+  BK_ENTRY(B, __FUNCTION__, __FILE__, "libbk");
+  void *tmp;
+
+  if (!dp || !sp)
+  {
+    bk_error_printf(B, BK_ERR_ERR,"Illegal arguments\n");
+    BK_RETURN(B, -1);
+  }
+
+  if (!(tmp = realloc(dp->ptr, dp->len + sp->len)))
+  {
+    bk_error_printf(B, BK_ERR_ERR, "Could not realloc alloc_ptr\n");
+    BK_RETURN(B,-1);
+  }
+
+  dp->ptr = tmp;
+  memcpy((char *)dp->ptr + dp->len, sp->ptr, sp->len);
+  dp->len += sp->len;
+
+  BK_RETURN(B,0);
+}
+
+
+
+/**
  * Trim a @a bk_vptr.
  *
  *	@param B BAKA thread/global state.
@@ -36,11 +71,12 @@ static const char libbk__contact[] = "<projectbaka@baka.org>";
  *	@return <i>-1</i> on failure.<br>
  *	@return the <i>length</i> <em>removed</em> success.
  */
-extern int vptr_trimleft(bk_s B, struct bk_vptr *vptr, const void *ptr)
+int bk_vptr_trimleft(bk_s B, struct bk_vptr *vptr, const void *ptr)
 {
-  BK_ENTRY(B, __FUNCTION__,__FILE__,"blue-plugin");
+  BK_ENTRY(B, __FUNCTION__, __FILE__, "libbk");
   size_t removed;
   size_t left_over;
+  void *new;
 
   if (!vptr || !ptr || ptr < vptr->ptr)
   {
@@ -61,14 +97,17 @@ extern int vptr_trimleft(bk_s B, struct bk_vptr *vptr, const void *ptr)
     memmove(vptr->ptr, ptr, left_over);
 
   // realloc pointer for efficiency.  Iff !leftover, realloc to 1
-  if (!realloc(vptr->ptr, left_over ? left_over : 1))
+  if ((new = realloc(vptr->ptr, left_over ? left_over : 1)))
+    vptr->ptr = new;				// probably the same anyhow
+  else
   {
     /*
-     * We can still continue since the original block is left
-     * untouched in case of realloc failure. But generate a warning
-     * anyway since this is unexpected.
+     * We can still continue since the original block is left untouched in case
+     * of realloc failure. But generate a warning since this is unexpected.
+     * Note that most realloc implementations waste the space in any case.
      */
-    bk_error_printf(B, BK_ERR_WARN, "Failed to realloc pointer -- efficiency may be affected.\n");
+    bk_error_printf(B, BK_ERR_WARN, "Trimmed vptr wastes %u bytes.\n",
+		    removed);
   }
 
   vptr->len = left_over;
@@ -85,11 +124,11 @@ extern int vptr_trimleft(bk_s B, struct bk_vptr *vptr, const void *ptr)
  *	@param vptr The @a bk_vptr to lop off.
  *	@param n number of bytes to remove
  *	@return <i>-1</i> on failure.<br>
- *	@return the <i>length</i> <em>removed</em> success.
+ *	@return the <i>length</i> <em>removed</em> on success.
  */
-extern int vptr_ntrimleft(bk_s B, struct bk_vptr *vptr, size_t n)
+extern int bk_vptr_ntrimleft(bk_s B, struct bk_vptr *vptr, size_t n)
 {
-  BK_ENTRY(B, __FUNCTION__,__FILE__,"blue-plugin");
+  BK_ENTRY(B, __FUNCTION__, __FILE__, "libbk");
 
   if (!vptr)
   {
@@ -97,5 +136,43 @@ extern int vptr_ntrimleft(bk_s B, struct bk_vptr *vptr, size_t n)
     BK_RETURN(B, -1);
   }
 
-  BK_RETURN(B, vptr_trimleft(B, vptr, (char*)(vptr->ptr) + n));
+  BK_RETURN(B, bk_vptr_trimleft(B, vptr, (char*)(vptr->ptr) + n));
+}
+
+
+
+/**
+ * Compare two bk_vptrs.
+ *
+ *	@param v1 The first @a bk_vptr address
+ *	@param v2 The second @a bk_vptr address
+ *	@return < 0 if v1 is shorter than v2 or less than v2
+ *	@return 0 if contents of v1 == v2
+ *	@return > 0 otherwise
+ */
+int bk_vptr_cmp(bk_vptr *v1, bk_vptr *v2)
+{
+  bk_vptr *shortv, *longv;
+  int r;
+
+  if (v1->len == v2->len)
+    return memcmp(v1->ptr, v2->ptr, v1->len);
+
+  if (v1->len < v2->len)
+  {
+    shortv = v1;
+    longv = v2;
+  }
+  else
+  {
+    shortv = v2;
+    longv = v1;
+  }
+
+  r = memcmp(shortv->ptr, longv->ptr, shortv->len);
+
+  if (r == 0)
+    return (shortv == v1) ? -1 : 1;
+  else
+    return r;
 }
